html paragraph part added

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Raihan Gazi Portfolio</title>
+    <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
@@ -14,6 +15,14 @@
 <body>
     <h1>Welcome To</h1>
     <h1>Raihan Gazi World</h1>
+    <h3>Web Designer || Web Developer || Network Engineer</h3>
+    <p>
+        I am Raihan Gazi. I am CSE engineer. I have competed my graduation from institute of science and technology in
+        2019. I have about one year of web designing experience at AlesahaTech Limited. Now I am preparing myself to be
+        a fullstack web developer using javascript. For that reason I have joined to the course of programming hero.
+        Let's see whats happen.
+    </p>
+    <img src="images/jhankar.png" alt="">
 </body>
 
 </html>
