top banner part completed

--- a/index.html
+++ b/index.html
@@ -13,16 +13,28 @@
 </head>
 
 <body>
-    <h1>Welcome To</h1>
-    <h1>Raihan Gazi World</h1>
-    <h3>Web Designer || Web Developer || Network Engineer</h3>
-    <p>
-        I am Raihan Gazi. I am CSE engineer. I have competed my graduation from institute of science and technology in
-        2019. I have about one year of web designing experience at AlesahaTech Limited. Now I am preparing myself to be
-        a fullstack web developer using javascript. For that reason I have joined to the course of programming hero.
-        Let's see whats happen.
-    </p>
-    <img src="images/jhankar.png" alt="">
+    <section class="top-banner">
+        <div class="half-width">
+            <h1>Welcome To</h1>
+            <h1>Raihan Gazi World</h1>
+            <h3>Web Designer || Web Developer || Network Engineer</h3>
+            <p>
+                I am Raihan Gazi. I am CSE engineer. I have competed my graduation from institute of science and
+                technology
+                in
+                2019. I have about one year of web designing experience at AlesahaTech Limited. Now I am preparing
+                myself to
+                be
+                a fullstack web developer using javascript. For that reason I have joined to the course of programming
+                hero.
+                Let's see whats happen.
+            </p>
+            <a target="_blank" href="https://www.linkedin.com/in/raihan-gazi-b9620916a/" class="hire-btn">Hire Me</a>
+        </div>
+        <div class="half-width">
+            <img src="images/jhankar.png" alt="">
+        </div>
+    </section>
 </body>
 
 </html>
