Dream Big Added

--- a/index.html
+++ b/index.html
@@ -35,6 +35,21 @@
             <img src="images/jhankar.png" alt="">
         </div>
     </section>
+    <section class="dream-big">
+        <div class="half-width">
+            <img src="images/jhankar2.png" alt="">
+        </div>
+        <div class="half-width">
+            <h1>Dream Big</h1>
+            <h2>Become a Web Developer</h2>
+            <p>
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatum sit consequatur ipsum debitis
+                reiciendis quos necessitatibus illum distinctio alias non, quisquam, tempore excepturi fuga officia
+                velit perferendis fugiat nobis? Magnam!
+            </p>
+            <a target="_blank" href="" class="hire-btn">DOWNLOAD RESUME</a>
+        </div>
+    </section>
 </body>
 
 </html>
