--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 </head>
 
 <body>
-    <section class="top-banner">
+    <section class="top-banner flexible-container">
         <div class="half-width">
             <h1>Welcome To</h1>
-            <h1>Raihan Gazi World</h1>
+            <h1><span class="orange-color">Raihan Gazi</span> World</h1>
             <h3>Web Designer || Web Developer || Network Engineer</h3>
             <p>
                 I am Raihan Gazi. I am CSE engineer. I have competed my graduation from institute of science and
@@ -35,7 +35,7 @@
             <img src="images/jhankar.png" alt="">
         </div>
     </section>
-    <section class="dream-big">
+    <section class="dream-big flexible-container">
         <div class="half-width">
             <img src="images/jhankar2.png" alt="">
         </div>
@@ -50,6 +50,28 @@
             <a target="_blank" href="" class="hire-btn">DOWNLOAD RESUME</a>
         </div>
     </section>
+
+    <section class="experience-area">
+        <h1>Experiences</h1>
+        <div class="flexible-container">
+            <div id="fullstack-dev" class="experience-item">
+                <h2>Fullstack web developer</h2>
+                <h3 class="orange-color">2020 - 2022 || Pro Level Developer</h3>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quasi amet eum sunt in pariatur iusto
+                    excepturi
+                    quam adipisci iure. Sunt sit voluptas inventore quidem maiores fuga? Alias nobis numquam ab.</p>
+            </div>
+            <div id="forntend-dev" class="experience-item">
+                <h2>Frontend web developer</h2>
+                <h3 class="orange-color">2022 - 2024 || Frontend Developer</h3>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quasi amet eum sunt in pariatur iusto
+                    excepturi
+                    quam adipisci iure. Sunt sit voluptas inventore quidem maiores fuga? Alias nobis numquam ab.</p>
+            </div>
+        </div>
+    </section>
+
+    <footer>© Peter Parker 2023, a Programming Hero initiative.</footer>
 </body>
 
 </html>
